--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap");
 
 * {
   box-sizing: border-box;
@@ -7,10 +7,11 @@
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .container {
+  position: relative;
   max-width: 500px;
   margin: 30px auto;
   overflow: auto;
@@ -18,6 +19,7 @@ body {
   border: 1px solid steelblue;
   padding: 30px;
   border-radius: 5px;
+  padding-bottom: 60px;
 }
 
 .header {
@@ -109,4 +111,16 @@ body {
 footer {
   margin-top: 30px;
   text-align: center;
+}
+@media screen and (max-width: 440px) {
+  .header {
+    flex-direction: column;
+    align-items: unset;
+  }
+}
+
+@media screen and (max-width: 542px) {
+  .container {
+    margin: 30px 15px;
+  }
 }
